--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
-site_name: Template de Entrega
-site_author: Sandmann, H.
-site_url: https://hsandmann.github.io/documentation.template
-repo_url: https://github.com/hsandmann/documentation.template
+site_name: Machine Learning
+site_author: Dimitrof, P.
+site_url: https://PabloDimitrof.github.io/documentation.template
+repo_url: https://github.com/PabloDimitrof/documentation.template
 repo_name: github/documentation.template
 
 theme:
