--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,8 @@
 site_name: Machine Learning
 site_author: Dimitrof, P.
-site_url: https://PabloDimitrof.github.io/documentation.template
-repo_url: https://github.com/PabloDimitrof/documentation.template
-repo_name: github/documentation.template
+site_url: https://PabloDimitrof.github.io/machine-learning
+repo_url: https://github.com/PabloDimitrof/machine-learning
+repo_name: github/machine-learning
 
 theme:
   name: material
@@ -133,6 +133,7 @@ extra_javascript:
 
 nav:
   - Home: index.md
+  - Arvore: ./arvore-decisao/main.md
   - Roteiros:
     - Roteiro 1: ./roteiro1/main.md
     - Roteiro 2: ./roteiro2/main.md
