--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -132,11 +132,11 @@ extra_javascript:
   - https://fastly.jsdelivr.net/npm/echarts/dist/echarts.min.js
 
 nav:
-  - Home: index.md
-  - Arvore: ./arvore-decisao/main.md
-  - Roteiros:
-    - Roteiro 1: ./roteiro1/main.md
-    - Roteiro 2: ./roteiro2/main.md
-    - Roteiro 3: ./roteiro3/main.md
-    - Roteiro 4: ./roteiro4/main.md
-  - Projeto: ./projeto/main.md
+#  - Home: index.md
+  - Árvore de Decisão: ./arvore-decisao/main.md
+#  - Roteiros:
+#    - Roteiro 1: ./roteiro1/main.md
+#    - Roteiro 2: ./roteiro2/main.md
+#    - Roteiro 3: ./roteiro3/main.md
+#    - Roteiro 4: ./roteiro4/main.md
+#  - Projeto: ./projeto/main.md
