--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -132,14 +132,9 @@ extra_javascript:
   - https://fastly.jsdelivr.net/npm/echarts/dist/echarts.min.js
 
 nav:
-#  - Home: index.md
+- Home: index.md
+- Modelos:
   - Árvore de Decisão: ./arvore-decisao/main.md
   - KNN: ./knn/main.md
   - K-Means: ./k-means/main.md
   - Random Forest: ./random-forest/main.md
-#  - Roteiros:
-#    - Roteiro 1: ./roteiro1/main.md
-#    - Roteiro 2: ./roteiro2/main.md
-#    - Roteiro 3: ./roteiro3/main.md
-#    - Roteiro 4: ./roteiro4/main.md
-#  - Projeto: ./projeto/main.md
